# it_horoscope

./: README.md  main.py  pyproject.toml
ci/: .env.example  docker-compose.yaml
config/: app_config.py
src/: Dockerfile  main.py  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 2025_09_16_2314-d3988b754a62_initial.py
src/api/handlers/: hello_handler.py  horoscope_handler.py  index_handler.py
src/api/states/: registration_state.py
src/api/tools/: filters.py  keyboards.py
src/bases/: base_alchemy_session.py  base_dto.py  base_http_client.py  base_llm_client.py
src/bases/repositories/: base_horoscope_repository.py  base_user_repository.py
src/bases/services/: gigachat_llm_service.py  horoscope_service.py  user_service.py
src/config/: app_config.py  integration_config.py  llm_config.py  logger_config.py  pg_config.py
src/dto/: http_dto.py  prediction_dto.py  user_dto.py
src/integration/: http_client.py
src/llm_clients/: gigachat_client.py
src/orm/: alchemy_session.py
src/orm/models/: prediction_orm.py  user_orm.py
src/orm/repositories/: horoscope_repository.py  user_repository.py
src/services/: gigachat_service.py  horoscope_service.py  user_service.py
src/tools/: const.py  emoji_checker.py
src/tools/di_containers/: alchemy_container.py  integration_container.py  llm_container.py  service_container.py
tools/: const.py
