[project]
name = "it-horoscope"
version = "1.0.0"
description = "IT-Гороскоп"
authors = [
    {name = "vladushka2000"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "openai (>=1.107.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
